# find

./: .editorconfig  .gitattributes  .gitignore  ALGORITHMS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  RELEASE.md  deny.toml  todo.md
.cargo/: config.toml
.githooks/: commit-msg
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: bench.rs
docs/: algorithms.md  architecture.md  benchmarks.md  cli.md  configuration.md  deployment.md  faq.md  getting-started.md  glossary.md  modules.md  observability.md  overview.md  performance.md  roadmap.md  security.md  testing.md  troubleshooting.md
docs/adr/: 0002-batch-normalization.md  0005-pure-search-module.md  0006-binary-cache-format.md  0008-mutex-poisoning-policy.md  0009-runtime-batch-size.md  0010-k256-bmi2-portable-scope.md  0011-address-discovery.md  README.md
docs/maintenance/: release.md
docs/optimization-decisions/: 0001-affinepoint-x-direct.md  0002-variant-labels-once-lock.md  0003-packed-variant-index.md  0004-atomic-flag-early-exit.md  0005-cached-sweep-stack-buffer.md  0006-u256-decimal-no-biguint.md  0007-oncelock-early-exit.md  0008-super-batch-chaining.md  0009-deferred-batch-normalize.md  0010-group-early-exit-flag.md  README.md
examples/: random_scalar_test.rs  stress.rs  sweep_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: generate_variants.rs  hex_to_scalar.rs  match_x.rs  parse_pubkey.rs  parse_pubkey_roundtrip.rs  scalar_mul_g.rs
k256-bmi2/: Cargo.toml
k256-bmi2/benches/: field_mul.rs
k256-bmi2/proptest-regressions/: lib.txt
k256-bmi2/src/: lib.rs
scripts/: build-pgo.sh  check-all.sh  run-benchmarks.sh  setup-hooks.sh
src/: address.rs  config.rs  ecc.rs  error.rs  lib.rs  main.rs  orchestrator.rs  persistence.rs  search.rs  telemetry.rs
tests/: audit.rs  differential.rs  integration.proptest-regressions  integration.rs  kat.rs  orchestrator.rs
