[package]
name = "find"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
description = "A high-performance Rust system for secp256k1 cryptographic research and educational discovery."
authors = ["Sachin <https://github.com/sachn-cs>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sachn-cs/find"
homepage = "https://github.com/sachn-cs/find"
documentation = "https://docs.rs/find"
bugs = "https://github.com/sachn-cs/find/issues"
readme = "README.md"
categories = ["cryptography", "command-line-utilities"]
keywords = ["bitcoin", "secp256k1", "ecc", "search", "cryptography"]

[dependencies]
# Cryptography
k256 = { version = "0.13", features = ["arithmetic", "serde", "bits", "pkcs8"] }

# CLI & parsing
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding & math
hex = "0.4"
num-bigint = "0.4"

# Parallelism
rayon = "1.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.10"
rand = "0.9"
rand_chacha = "0.9"
criterion = "0.8"
num-traits = "0.2"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true
