[package]
name = "k256-bmi2"
version = "0.1.0"
edition = "2021"
description = "BMI2/ADX-accelerated field multiplication for secp256k1 — drop-in fork of k256's field arithmetic."
license = "MIT"

[dependencies]
# Used by property tests to verify the portable mul matches k256's
# reference FieldElement::mul byte-for-byte.
k256 = { version = "0.13", features = ["arithmetic", "expose-field", "bits", "pkcs8"] }

[dev-dependencies]
proptest = "1"
criterion = "0.8"

[[bench]]
name = "field_mul"
harness = false