[package]
name = "k256-bmi2"
version = "0.1.0"
edition = "2021"
description = "BMI2/ADX-accelerated field multiplication for secp256k1 — drop-in fork of k256's field arithmetic."
license = "MIT"

[dependencies]

[dev-dependencies]
# Used by the `mul_matches_k256_reference` test to verify byte-exact
# equivalence with the reference k256 FieldElement::mul.
k256 = { version = "0.13", features = ["arithmetic", "expose-field", "bits", "pkcs8"] }
proptest = "1"
criterion = "0.8"

[[bench]]
name = "field_mul"
harness = false